add README file for wdd232 course

--- a/index.html
+++ b/index.html
@@ -25,18 +25,20 @@
                 <li><a href="https://github.com/shadrackerhiaganoma2002">GitHub Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/shadrack-ekavana-erhiaganoma">LinkedIn</a></li>
          </ul>
-        </nav>
+
     </header>
     <main>
-        <section>
+        <section class="course-container">
             <h2>Introduction</h2>
             <p>This is the homepage for WDD231. Explore the links above to learn more.</p>
+            <nav>
              <ul>
                 <li class="">Course 1</li>
                 <li class="">Course 2</li>
                 <li class="">Course 3</li>
             </ul>
         </section>
+        </nav>
     </main>
      <footer>
         <p>&copy; <span id="year"></span> Shadrack Erhiaganoma Ekavana, Fedral capital Teritorry</p>
