--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta author="Shadrack-Erhiaganoma-Ekavana">
     <title>WDD231 - Course-Homepage</title>
     <link rel="stylesheet" href="styles/smaller.css">
-    <link rel="stylesheet" href="styles/larger.css" media="screen and (min-width: 600px)">
+    <link rel="stylesheet" href="styles/Larger.css" media="screen and (min-width: 600px)">
     <script src="script/index.js"></script>
     <script src="script/date.js"></script>
     <script src="script/course.js"></script>
