enhanced the homepage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
 </head>
 <body>
     <header>
-
+    <nav>
+        <ul class="nav-menu">
+        <li><a href="#" class="nav-link">Chamber</a></li>
+        <li><a href="#" class="nav-link">Final</a></li>
+        <li><a href="https://github.com/shadrackerhiaganoma2002" class="nav-link">GitHub Profile</a></li>
+        <li><a href="https://www.linkedin.com/in/shadrack-ekavana-erhiaganoma" class="nav-link">LinkedIn</a></li>
+        </ul>
+        <button class="menu-toggle" aria-label="Toggle navigation menu">☰</button>
+    </nav>
         <h1 style="font-size: 1.5rem; margin: 0;">Shadrack Erhiaganoma Ekavana</h1>
         <h2 style="font-size: 1.2rem; margin: 0;">WDD231 - Course-Homepage</h2>
         <img src="images/IMG-20250410-WA0046.jpg" alt="Photo of Shadrack Erhiaganoma Ekavana" class="profile-pic">        <nav>
