i remodified the hompage

--- a/index.html
+++ b/index.html
@@ -5,15 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD231 Home Page">
-    <meta author="Shadrack-Erhiaganoma-Ekavana">
+    <meta name="author" content="Shadrack-Erhiaganoma-Ekavana">
     <title>WDD231 - Course-Homepage</title>
+
     <link rel="stylesheet" href="styles/smaller.css">
-    <link rel="stylesheet" href="styles/Larger.css" media="screen and (min-width: 600px)">
-    <script src="script/index.js"></script>
-    <script src="script/date.js"></script>
-    <script src="script/course.js"></script>
+    <link rel="stylesheet" href="styles/larger.css" media="screen and (min-width: 600px)">
+    
+    <script src="scripts/index.js"></script>
+    <script src="scripts/date.js"></script>
+    <script src="scripts/course.js"></script>
 
 </head>
+
 <body>
     <header>
     <nav>
