remodified the homepage

--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
     <header>
         <nav class="nav-links">
             <a href="#"> <span class="close-menu">✖</span> </a>
-            <a href="index.html">Home</a>
+            <a href="index2.html">Home</a>
             <a href="chamber/index.html">Chamber</a>
             <a href="https://github.com/shadrackerhiaganoma2002">GitHub Profile</a>
             <a href="https://www.linkedin.com/in/shadrack-ekavana-erhiaganoma">LinkedIn</a>
