made corrections to the discovery page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Christian I. Ahanonu">
+    <meta name="author" content="Shadrack Erhiaganoma Ekavana">
+    <meta name="keywords" content="Abuja, Chamber of Commerce, Business, Directory, Events, Weather, Networking, Community">
     <meta name="description" content="Abuja Chamber of Commerce. We have 
     the vision to build a community where businesses can thrive, foster a community of growth, 
     and contribute to economic development. A place for businesses to connect together.">
@@ -12,8 +13,8 @@
     <meta property="og:title" content="Abuja Chamber of Commerce">
     <meta property="og:description" content="Abuja Chamber of Commerce connecting businesses together">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://christian-ahanonu.github.io/wdd231/chamber/images/homepage-photo.jpeg">
-    <meta property="og:url" content="https://christian-ahanonu.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="https://shadrackerhiaganoma2002.github.io/wdd231/chamber/images/homepage-photo.jpeg">
+    <meta property="og:url" content="https://shadrackerhiaganoma2002.github.io/wdd231/chamber/index.html">
     <meta name="twitter:card" content="Abuja Chamber of Commerce connects and grows businesses.">
     <title>Discovery | Abuja Chambers of Commerce </title>
 
@@ -48,7 +49,7 @@
                 <li> <i class="fa-brands fa-facebook"></i> </li>
                 <li> <i class="fa-brands fa-twitter"></i> </li>
                 <li> <i class="fa-brands fa-linkedin"></i> </li>
-                <li> (+234) 817-362-0785 </li>
+                <li> (+234) 813-391-0700 </li>
             </ul>
         </nav>
 
