corrected and adjusted

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,6 +66,8 @@
             <span>
                 <a href="index.html"> 
                     <img src="image/logo.webp" alt="Abuja Chambers of Commerce logo">
+                    <h1>Abuja</h1>
+                    <p>chamber of Commerce</p>
                 </a>
 
                 <span id="icon-menu"> </span>
