--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Christian I. Ahanonu">
+    <meta name="author" content="Shadrack Erhiaganoma Ekavana">
+    <meta name="keywords" content="Abuja, Chamber of Commerce, Business, Directory, Join, Discover">
     <meta name="description" content="Abuja Chamber of Commerce. We have 
     the vision to build a community where businesses can thrive, foster a community of growth, 
     and contribute to economic development. A place for businesses to connect together.">
@@ -12,8 +13,8 @@
     <meta property="og:title" content="Abuja Chamber of Commerce">
     <meta property="og:description" content="Abuja Chamber of Commerce connecting businesses together">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://christian-ahanonu.github.io/wdd231/chamber/images/homepage-photo.jpeg">
-    <meta property="og:url" content="https://christian-ahanonu.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="https://shadrackerhiaganoma2002.github.io/wdd231/chamber/images/homepage-photo.jpeg">
+    <meta property="og:url" content="https://shadrackerhiaganoma2002.github.io/wdd231/chamber/index.html">
     <meta name="twitter:card" content="Abuja Chamber of Commerce connects and grows businesses.">
     <title>Submit Application | Abuja Chambers of Commerce </title>
 
@@ -26,15 +27,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/normalize.css" media="screen">
-    <link rel="stylesheet" href="styles/thankyou.css" media="screen">
-    <link rel="stylesheet" href="styles/directory.css" media="screen">
-    <link rel="stylesheet" href="styles/directory-large.css" media="screen">
+    <link rel="stylesheet" href="style/normalize.css" media="screen">
+    <link rel="stylesheet" href="style/thankyou.css" media="screen">
+    <link rel="stylesheet" href="style/dirctory.css" media="screen">
+    <link rel="stylesheet" href="style/dirctory-large.css" media="screen">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     
-    <script src="scripts/thankyou.js" defer></script>
-    <script src="scripts/lastmodified.js" defer></script>
-    <script src="scripts/nav.js" defer></script>
+    <script src="script/thankyou.js" defer></script>
+    <script src="script/lastmodified.js" defer></script>
+    <script src="script/navigation.js" defer></script>
 </head>
 
 <body>
@@ -64,7 +65,7 @@
         <div class="nav-container">
             <span>
                 <a href="index.html"> 
-                    <img src="images/acc_logo.svg" alt="Abuja Chambers of Commerce logo">
+                    <img src="image/logo.webp" alt="Abuja Chambers of Commerce logo">
                 </a>
 
                 <span id="icon-menu"> </span>
@@ -102,7 +103,7 @@
                         No 3 Galadima Close, Garki <br>
                         Abuja <br>
                         <a href="#">info@abujacc.org</a><br>
-                        (+234) 817-362-0785
+                        (+234) 809-712-0653
                     </p>
                 </div>
 
